--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:bullseye-slim AS build
+FROM ubuntu:jammy AS build
 
 # https://nominatim.org/release-docs/develop/appendix/Install-on-Ubuntu-20/
 # Changes from the docs:
@@ -23,10 +23,10 @@ RUN apt-get update && apt-get install -y \
     php-cgi \
     php-pgsql \
     php-intl \
-    postgresql-13-postgis-3 \
-    postgresql-13-postgis-3-scripts \
-    postgresql-contrib-13 \
-    postgresql-server-dev-13 \
+    postgresql-14-postgis-3 \
+    postgresql-14-postgis-3-scripts \
+    postgresql-contrib-14 \
+    postgresql-server-dev-14 \
     python3-datrie \
     python3-dotenv \
     python3-icu \
@@ -50,7 +50,7 @@ RUN curl -O -L http://www.nominatim.org/release/Nominatim-$NOMINATIM_VERSION.tar
  && make install
 
 # now start over from the same base image
-FROM debian:bullseye-slim
+FROM ubuntu:jammy
 
 # https://nominatim.org/release-docs/4.0.1/develop/Testing/
 ENV DEBIAN_FRONTEND=noninteractive
@@ -62,7 +62,7 @@ RUN apt-get update && apt-get install -y \
     php-codecoverage \
     php-pgsql \
     php-xdebug \
-    postgresql-client-13 \
+    postgresql-client-14 \
     python3-behave \
     python3-datrie \
     python3-dotenv \
