--- a/web/site.conf
+++ b/web/site.conf
@@ -8,10 +8,61 @@ server {
     # error_log /var/log/nginx/error.log debug;
     # command: [nginx-debug, '-g', 'daemon off;']
 
+    # if you use the "apache" command for n7m-app, this localtion block should be used
+    #location /api/v4/ {
+    #    proxy_pass http://app;
+    #    index search.php;
+    #}
+
+    # This looks good, but does not work.  Always results in /nominatim/website/api/v4/file.phs
+    #location /api/v4/ {
+    #    root /nominatim/website;
+    #    fastcgi_split_path_info ^/api/v4(/.+\.php)(/.*)$;
+    #    fastcgi_param SCRIPT_FILENAME "$document_root$fastcgi_script_name";
+    #    fastcgi_pass app:9000;
+    #    include fastcgi_params;
+    #}
+
     location /api/v4/ {
-        proxy_pass http://app;
-        index search.php;
+        root /nominatim/website;
+    
+        location /api/v4/search.php {
+            fastcgi_param SCRIPT_FILENAME "$document_root/search.php";
+            fastcgi_pass app:9000;
+            include fastcgi_params;
+        }
+        location /api/v4/lookup.php {
+            fastcgi_param SCRIPT_FILENAME "$document_root/lookup.php";
+            fastcgi_pass app:9000;
+            include fastcgi_params;
+        }
+        location /api/v4/reverse.php {
+            fastcgi_param SCRIPT_FILENAME "$document_root/reverse.php";
+            fastcgi_pass app:9000;
+            include fastcgi_params;
+        }
+        location /api/v4/polygons.php {
+            fastcgi_param SCRIPT_FILENAME "$document_root/polygons.php";
+            fastcgi_pass app:9000;
+            include fastcgi_params;
+        }
+        location /api/v4/status.php {
+            fastcgi_param SCRIPT_FILENAME "$document_root/status.php";
+            fastcgi_pass app:9000;
+            include fastcgi_params;
+        }
+        location /api/v4/details.php {
+            fastcgi_param SCRIPT_FILENAME "$document_root/details.php";
+            fastcgi_pass app:9000;
+            include fastcgi_params;
+        }
+        location /api/v4/deletable.php {
+            fastcgi_param SCRIPT_FILENAME "$document_root/deletable.php";
+            fastcgi_pass app:9000;
+            include fastcgi_params;
+        }
     }
+
     location / {
         proxy_pass http://ui;
     }
