--- a/web/site.conf
+++ b/web/site.conf
@@ -14,7 +14,7 @@ server {
     #    index search.php;
     #}
 
-    # This looks good, but does not work.  Always results in /nominatim/website/api/v4/file.phs
+    # This looks good, but does not work.  Always results in /nominatim/website/api/v4/file.php
     #location /api/v4/ {
     #    root /nominatim/website;
     #    fastcgi_split_path_info ^/api/v4(/.+\.php)(/.*)$;
