--- a/web/site.conf
+++ b/web/site.conf
@@ -8,12 +8,7 @@ server {
     # error_log /var/log/nginx/error.log debug;
     # command: [nginx-debug, '-g', 'daemon off;']
 
-    # if you use the "apache" command for n7m-app, this localtion block should be used
-    #location /api/v4/ {
-    #    proxy_pass http://app;
-    #    index search.php;
-    #}
-
+    # n7m-app
     location /api/v4/ {
         root /nominatim/website;
         fastcgi_split_path_info ^/api/v4(/.+\.php)()$;
@@ -22,6 +17,7 @@ server {
         include fastcgi_params;
     }
 
+    # n7m-ui
     location / {
         proxy_pass http://ui;
     }
