hosting non-php extensions

--- a/web/site.conf
+++ b/web/site.conf
@@ -8,7 +8,14 @@ server {
     # error_log /var/log/nginx/error.log debug;
     # command: [nginx-debug, '-g', 'daemon off;']
 
-    # n7m-app
+    # n7m-app - exposing reverse geocoding without an extension
+    location /api/v4/reverse {
+        root /nominatim/website;
+        fastcgi_param SCRIPT_FILENAME "$document_root/reverse.php";
+        fastcgi_pass app:9000;
+        include fastcgi_params;
+    }
+    # n7m-app - PHP endpoints
     location /api/v4/ {
         root /nominatim/website;
         fastcgi_split_path_info ^/api/v4(/.+\.php)()$;
