--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -21,25 +21,10 @@ services:
       - gis
     environment:
       - PGPASSWORD=n7m-geocoding
-    mem_limit: 200m
-  feed:
-    image: smithmicro/n7m-app
-    depends_on:
-      - gis
-    environment:
-      - PGPASSWORD=n7m-geocoding
-      - OSM_FILENAME=north-america-latest.osm.pbf
-    command: setup
-    volumes:
-      - /data/data:/data/
-    shm_size: 1gb
   gis:
-    image: smithmicro/n7m-gis
+    image: postgis/postgis:15-3.3-alpine
     restart: always
-    ports:
-      - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=n7m-geocoding
     volumes:
       - /data/pgdata:/var/lib/postgresql/data
-    shm_size: 1gb
