simplified nginx config, fixed docker on startup

--- a/ui/site.conf
+++ b/ui/site.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    index  index.html;
+    index  search.html;
 
     location / {
         root   /usr/share/nginx/html;
