--- a/deploy/docker-compose-setup.yml
+++ b/deploy/docker-compose-setup.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   feed:
-    image: smithmicro/n7m-app
+    image: smithmicro/n7m-app:4.2
     depends_on:
       - gis
     environment:
@@ -13,7 +13,7 @@ services:
       - /data/data:/data/
     shm_size: 1gb
   gis:
-    image: smithmicro/n7m-gis
+    image: smithmicro/n7m-gis:15
     restart: always
     environment:
       - POSTGRES_PASSWORD=n7m-geocoding
