--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   web:
-    image: smithmicro/n7m-web
+    image: smithmicro/n7m-web:4.2
     restart: always
     ports:
       - "80:80"
@@ -11,11 +11,11 @@ services:
       - ui
     mem_limit: 100m
   ui:
-    image: smithmicro/n7m-ui
+    image: smithmicro/n7m-ui:3.2
     restart: always
     mem_limit: 100m
   app:
-    image: smithmicro/n7m-app
+    image: smithmicro/n7m-app:4.2
     restart: always
     depends_on:
       - gis
