--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   web:
     build: web
-    image: smithmicro/n7m-web
+    image: smithmicro/n7m-web:4.2
     restart: always
     ports:
       - "8080:80"
@@ -13,12 +13,12 @@ services:
     mem_limit: 100m
   ui:
     build: ui
-    image: smithmicro/n7m-ui
+    image: smithmicro/n7m-ui:3.2
     restart: always
     mem_limit: 100m
   app:
     build: app
-    image: smithmicro/n7m-app
+    image: smithmicro/n7m-app:4.2
     #restart: always
     environment:
       - PGPASSWORD=n7m-geocoding
@@ -26,7 +26,7 @@ services:
       - gis
     mem_limit: 200m
   feed:
-    image: smithmicro/n7m-app
+    image: smithmicro/n7m-app:4.2
     depends_on:
       - gis
     environment:
@@ -40,7 +40,7 @@ services:
       - ${PWD}/data:/data/
   gis:
     build: gis
-    image: smithmicro/n7m-gis
+    image: smithmicro/n7m-gis:15
     restart: always
     ports:
       - "5432:5432"
