nginx 1.24, /health endpoint

--- a/web/site.conf
+++ b/web/site.conf
@@ -22,6 +22,13 @@ server {
         fastcgi_pass app:9000;
         include fastcgi_params;
     }
+    # n7m-app - health endponnt
+    location /health {
+        root /nominatim/website;
+        fastcgi_param SCRIPT_FILENAME "$document_root/status.php";
+        fastcgi_pass app:9000;
+        include fastcgi_params;
+    }
 
     # n7m-ui
     location / {
