--- a/gis/Dockerfile
+++ b/gis/Dockerfile
@@ -6,6 +6,6 @@ FROM postgis/postgis:15-3.3-alpine
 # Nominatim recommended configuration
 COPY --chown=postgres:postgres postgresql.conf /etc/postgresql/postgresql.conf
 # Configure 2 parameters for database import
-COPY import.sh /docker-entrypoint-initdb.d/
+COPY --chmod=0755 import.sh /docker-entrypoint-initdb.d/
 
 CMD [ "-c", "config_file=/etc/postgresql/postgresql.conf" ]
