--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   web:
     build: web
-    image: smithmicro/n7m-web:4.2
+    image: smithmicro/n7m-web:4.3
     restart: always
     ports:
       - "8080:80"
@@ -13,20 +13,21 @@ services:
     mem_limit: 100m
   ui:
     build: ui
-    image: smithmicro/n7m-ui:3.2
+    image: smithmicro/n7m-ui:3.4
     restart: always
     mem_limit: 100m
   app:
     build: app
-    image: smithmicro/n7m-app:4.2
+    image: smithmicro/n7m-app:4.3
     #restart: always
     environment:
       - PGPASSWORD=n7m-geocoding
+      - WEB_CONCURRENCY=2
     depends_on:
       - gis
     mem_limit: 200m
   feed:
-    image: smithmicro/n7m-app:4.2
+    image: smithmicro/n7m-app:4.3
     depends_on:
       - gis
     environment:
