--- a/web/site.conf
+++ b/web/site.conf
@@ -9,7 +9,7 @@ server {
 
     # n7m-app - Python endpoint
     location /api/v4/ {
-        rewrite /api/v4/(.*) /$1  break;
+        rewrite /api/v4/(.*) /$1 break;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -22,7 +22,7 @@ server {
 
     # n7m-app - Python health endpoint
     location /health {
-        rewrite /health /status.php  break;
+        rewrite /health /status break;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
