Dockerfile: use RUN cache

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,7 +3,8 @@ FROM ubuntu:jammy AS build
 # https://nominatim.org/release-docs/develop/appendix/Install-on-Ubuntu-22/
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     ca-certificates \
     cmake \
@@ -44,7 +45,8 @@ FROM ubuntu:jammy
 ENV DEBIAN_FRONTEND=noninteractive
 
 # install dependencies of the built binaries
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     curl \
     liblua5.4 \
@@ -63,7 +65,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-uvicorn \
     python3-sqlalchemy \
     python3-yaml \
- && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
 # For settings, see: https://nominatim.org/release-docs/develop/customize/Settings/
