--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,7 +3,11 @@ FROM ubuntu:jammy AS build
 # https://nominatim.org/release-docs/develop/appendix/Install-on-Ubuntu-22/
 ENV DEBIAN_FRONTEND=noninteractive
 
+# Taken from https://github.com/reproducible-containers/buildkit-cache-dance
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    rm -f /etc/apt/apt.conf.d/docker-clean && \
+    echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' >/etc/apt/apt.conf.d/keep-cache && \
     apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     ca-certificates \
@@ -46,6 +50,9 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # install dependencies of the built binaries
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    rm -f /etc/apt/apt.conf.d/docker-clean && \
+    echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' >/etc/apt/apt.conf.d/keep-cache && \
     apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     curl \
@@ -64,8 +71,7 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     python3-pyosmium \
     python3-uvicorn \
     python3-sqlalchemy \
-    python3-yaml \
- && rm -rf /var/lib/apt/lists/*
+    python3-yaml
 
 # For settings, see: https://nominatim.org/release-docs/develop/customize/Settings/
 ENV NOMINATIM_TOKENIZER=icu \
