--- a/.github/docker-compose.ci.yml
+++ b/.github/docker-compose.ci.yml
@@ -15,7 +15,7 @@ services:
     restart: 'no'
     # Define a healthcheck to wait for the postgres container to be online
     healthcheck:
-      test: ["pg_isready"]
+      test: ["CMD", "pg_isready", "--username=postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
