--- a/.github/docker-compose.ci.yml
+++ b/.github/docker-compose.ci.yml
@@ -3,15 +3,22 @@
 
 services:
   web:
+    image: smithmicro/n7m-web:latest
     restart: 'no'
 
   ui:
+    image: smithmicro/n7m-ui:latest
     restart: 'no'
 
   app:
+    image: smithmicro/n7m-app:latest
     restart: 'no'
-  
+
+  feed:
+    image: smithmicro/n7m-app:latest
+
   gis:
+    image: smithmicro/n7m-gis:latest
     restart: 'no'
     # Define a healthcheck to wait for the postgres container to be online
     healthcheck:
