--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '2'
-
 services:
   web:
-    image: smithmicro/n7m-web:4.3
+    image: smithmicro/n7m-web
     restart: always
     ports:
       - "80:80"
@@ -11,11 +9,11 @@ services:
       - ui
     mem_limit: 100m
   ui:
-    image: smithmicro/n7m-ui:3.4
+    image: smithmicro/n7m-ui
     restart: always
     mem_limit: 100m
   app:
-    image: smithmicro/n7m-app:4.3
+    image: smithmicro/n7m-app
     restart: always
     depends_on:
       - gis
