--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '2'
-
 services:
   web:
     build: web
-    image: smithmicro/n7m-web:4.3
+    image: smithmicro/n7m-web
     restart: always
     ports:
       - "8080:80"
@@ -13,12 +11,12 @@ services:
     mem_limit: 100m
   ui:
     build: ui
-    image: smithmicro/n7m-ui:3.4
+    image: smithmicro/n7m-ui
     restart: always
     mem_limit: 100m
   app:
     build: app
-    image: smithmicro/n7m-app:4.3
+    image: smithmicro/n7m-app
     #restart: always
     environment:
       - PGPASSWORD=n7m-geocoding
@@ -27,7 +25,7 @@ services:
       - gis
     mem_limit: 200m
   feed:
-    image: smithmicro/n7m-app:4.3
+    image: smithmicro/n7m-app
     depends_on:
       - gis
     environment:
