--- a/deploy/docker-compose-setup.yml
+++ b/deploy/docker-compose-setup.yml
@@ -1,6 +1,8 @@
+version: '2'
+
 services:
   feed:
-    image: smithmicro/n7m-app
+    image: smithmicro/n7m-app:4.3
     depends_on:
       - gis
     environment:
