--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+version: '2'
+
 services:
   web:
     build: web
-    image: smithmicro/n7m-web
+    image: smithmicro/n7m-web:4.3
     restart: always
     ports:
       - "8080:80"
@@ -11,12 +13,12 @@ services:
     mem_limit: 100m
   ui:
     build: ui
-    image: smithmicro/n7m-ui
+    image: smithmicro/n7m-ui:3.4
     restart: always
     mem_limit: 100m
   app:
     build: app
-    image: smithmicro/n7m-app
+    image: smithmicro/n7m-app:4.3
     #restart: always
     environment:
       - PGPASSWORD=n7m-geocoding
@@ -25,7 +27,7 @@ services:
       - gis
     mem_limit: 200m
   feed:
-    image: smithmicro/n7m-app
+    image: smithmicro/n7m-app:4.3
     depends_on:
       - gis
     environment:
