--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     depends_on:
       - gis
     mem_limit: 200m
+    volumes:
+      - ./data:/data/
   feed:
     image: smithmicro/n7m-app
     depends_on:
@@ -46,6 +48,4 @@ services:
     environment:
       - POSTGRES_PASSWORD=n7m-geocoding
     volumes:
-      - pgdata:/var/lib/postgresql/data
-volumes:
-  pgdata:
+      - ./pgdata:/var/lib/postgresql/data
