--- a/web/site.conf
+++ b/web/site.conf
@@ -7,7 +7,7 @@ server {
     # error_log /var/log/nginx/error.log debug;
     # command: [nginx-debug, '-g', 'daemon off;']
 
-    # n7m-app - Python endpoint
+    # n7m-api - Python endpoint
     location /api/v4/ {
         rewrite /api/v4/(.*) /$1 break;
         proxy_set_header Host $http_host;
@@ -17,10 +17,10 @@ server {
         proxy_set_header Connection $connection_upgrade;
         proxy_redirect off;
         proxy_buffering off;
-        proxy_pass http://app:8000;
+        proxy_pass http://api:8000;
     }
 
-    # n7m-app - Python health endpoint
+    # n7m-api - Python health endpoint
     location /health {
         rewrite /health /status break;
         proxy_set_header Host $http_host;
@@ -30,7 +30,7 @@ server {
         proxy_set_header Connection $connection_upgrade;
         proxy_redirect off;
         proxy_buffering off;
-        proxy_pass http://app:8000;
+        proxy_pass http://api:8000;
     }
 
     # n7m-ui
