--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build: web
-    image: smithmicro/n7m-web:4.4
+    image: smithmicro/n7m-web
     restart: always
     ports:
       - "8080:80"
@@ -11,12 +11,12 @@ services:
     mem_limit: 100m
   ui:
     build: ui
-    image: smithmicro/n7m-ui:3.4
+    image: smithmicro/n7m-ui
     restart: always
     mem_limit: 100m
   api:
     build: api
-    image: smithmicro/n7m-api:4.4
+    image: smithmicro/n7m-api
     restart: always
     environment:
       - PGPASSWORD=n7m-geocoding
@@ -26,7 +26,7 @@ services:
     mem_limit: 200m
   feed:
     build: feed
-    image: smithmicro/n7m-feed:4.4
+    image: smithmicro/n7m-feed
     depends_on:
       - gis
     environment:
@@ -39,7 +39,7 @@ services:
       - ./data:/data/
   gis:
     build: gis
-    image: smithmicro/n7m-gis:15
+    image: smithmicro/n7m-gis
     restart: always
     ports:
       - "5432:5432"
