--- a/feed/Dockerfile
+++ b/feed/Dockerfile
@@ -1,84 +1,30 @@
-FROM debian:12-slim AS build
+FROM python:3.9-slim-bookworm
 
-# https://nominatim.org/release-docs/develop/appendix/Install-on-Ubuntu-22/
-ENV DEBIAN_FRONTEND=noninteractive
+ENV NOMINATIM_VERSION=4.5.0
+
+# https://nominatim.org/release-docs/latest/admin/Install-on-Ubuntu-24/
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    ca-certificates \
-    cmake \
-    curl \
-    git \
     g++ \
-    libboost-dev \
-    libboost-filesystem-dev \
-    libboost-system-dev \
-    libbz2-dev \
-    libexpat1-dev \
     libicu-dev \
-    liblua5.4-dev \
-    libpq-dev \
-    libproj-dev \
-    nlohmann-json3-dev \
-    php \
-    python3 \
-    zlib1g-dev
-
-ENV NOMINATIM_VERSION=4.4.0
-
-# Fetch
-WORKDIR /nominatim
-RUN curl -O -L http://www.nominatim.org/release/Nominatim-$NOMINATIM_VERSION.tar.bz2 \
- && tar xvf Nominatim-$NOMINATIM_VERSION.tar.bz2 \
- && mv Nominatim-$NOMINATIM_VERSION Nominatim
-
-# Build and install
-WORKDIR /nominatim/build
-RUN cmake ../Nominatim -DBoost_USE_STATIC_LIBS=ON \
- && make \
- && make install
-
-# now start over from the same base image
-FROM debian:12-slim
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-# install dependencies of the built binaries
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates \
-    curl \
-    liblua5.4 \
-    libproj-dev \
+    osm2pgsql>=1.8 \
+    pkg-config \
     postgresql-client-15 \
-    python3-asyncpg \
-    python3-datrie \
-    python3-dotenv \
-    python3-geoalchemy2 \
-    python3-icu \
-    python3-jinja2 \
-    python3-psutil \
-    python3-psycopg2 \
-    python3-pyosmium \
-    python3-sqlalchemy \
-    python3-yaml \
+ && pip install --no-cache-dir \
+    nominatim_db==$NOMINATIM_VERSION \
+ && apt-get purge -y --auto-remove \
+    g++ \
+    pkg-config \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
 # For settings, see: https://nominatim.org/release-docs/develop/customize/Settings/
-ENV NOMINATIM_TOKENIZER=icu \
-    PGHOST=gis \
+ENV PGHOST=gis \
     PGUSER=postgres \
     PGPASSWORD=change-this-password \
-    OSM_FILENAME= \
-    WEB_CONCURRENCY=1
+    OSM_FILENAME=
 
 WORKDIR /nominatim
-
-# copy built binaries
-COPY --from=build /usr/local/bin/nominatim  /usr/local/bin/
-COPY --from=build /usr/local/etc/nominatim/ /usr/local/etc/nominatim/
-COPY --from=build /usr/local/lib/nominatim/ /usr/local/lib/nominatim/
-COPY --from=build /usr/local/share/nominatim/ /usr/local/share/nominatim/
 
 # copy shell scripts
 COPY --chmod=0755 *.sh ./
